test/corpus/equation_declaration2
==================
More complex equation declaration
==================


theory ComplexEquationDeclaration
begin

equations: 	id(a)=a,
			aeaddec(aeadenc(m, k, n, a), k, n, a) = m 

end

---

(source_file
  (security_protocol_theory
    (ident)
        (body
          (equations
            (equation
              (term
                (app
                  (ident)
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))))
              (term
                (literal
                  (nonnode_var
                    (msg_var
                      (ident))))))
            (equation
              (term
                (app
                  (ident)
                  (term
                    (app
                      (ident)
                      (term
                        (literal
                          (nonnode_var
                            (msg_var
                              (ident)))))
                      (term
                        (literal
                          (nonnode_var
                            (msg_var
                              (ident)))))
                      (term
                        (literal
                          (nonnode_var
                            (msg_var
                              (ident)))))
                      (term
                        (literal
                          (nonnode_var
                            (msg_var
                              (ident)))))))
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))))
              (term
                (literal
                  (nonnode_var
                    (msg_var
                      (ident))))))))))
