test/corpus/rule_with_different_types
==================
Rule with different types
==================


theory RuleWithTypes
begin

rule MyRule:
	[
		A(x, 'literal', '0literal', ~y, 0, ~'fresh_literal')
	]
	-->
	[
		B(y)
	]

end

---

(source_file
  (security_protocol_theory
    (ident)
      (body
        (rule
          (simple_rule
              (ident)
              (facts
                (fact
                  (ident)
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))
                  (term
                    (literal
					  (ident)))
                  (term
                    (literal
                      (ident)))
                  (term
                    (literal
                      (nonnode_var
                        (ident))))
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))
                  (term
                    (literal
					  (ident)))))
              (facts
                (fact
                  (ident)
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident))))))))))))
